[gd_scene load_steps=17 format=4 uid="uid://8cuycqhvypgw"]

[ext_resource type="Script" path="res://menus/MainMenu/main_menu.gd" id="1_2ke84"]
[ext_resource type="Texture2D" uid="uid://cqrftknnfo2cs" path="res://ui/ui.png" id="2_cfnyu"]
[ext_resource type="FontFile" uid="uid://b1urfel7egtmu" path="res://assets/fonts/VT323-Regular.ttf" id="3_4oq2b"]
[ext_resource type="Texture2D" uid="uid://c6n1otllaac03" path="res://assets/sprites/tilesets/background_tileset.png" id="4_wfbt0"]
[ext_resource type="Texture2D" uid="uid://cti8ohty27ds1" path="res://assets/images/game-logo.png" id="5_4b7jm"]
[ext_resource type="Texture2D" uid="uid://hr1aa7728i3r" path="res://assets/images/monkey-trio.png" id="6_8morn"]
[ext_resource type="AudioStream" uid="uid://b34jb3r52jqed" path="res://assets/music/main-menu-theme/main-menu-theme.ogg" id="7_7imlk"]
[ext_resource type="AudioStream" uid="uid://b6eybw1lp0exj" path="res://assets/sfx/ui/menu-navigate.wav" id="8_0vs8k"]
[ext_resource type="AudioStream" uid="uid://ct1rtntxcwq5u" path="res://assets/sfx/ui/click.wav" id="9_vgldu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_88p3p"]
atlas = ExtResource("2_cfnyu")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro5db"]
atlas = ExtResource("2_cfnyu")
region = Rect2(96, 96, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7w1jv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k85yc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6trc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1c5jv"]
texture = ExtResource("4_wfbt0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0

[sub_resource type="TileSet" id="TileSet_6rs58"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_1c5jv")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2ke84")

[node name="SocialsContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.738
anchor_top = 0.937
anchor_right = 0.974
anchor_bottom = 1.063
offset_left = 66.824
offset_top = -57.176
offset_right = -110.048
offset_bottom = -103.824
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2, 2)
alignment = 2

[node name="ItchIoButton" type="TextureButton" parent="SocialsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_88p3p")
stretch_mode = 4

[node name="GithubButton" type="TextureButton" parent="SocialsContainer"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_ro5db")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -270.0
offset_right = 322.0
offset_bottom = -15.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_top = NodePath("../QuitButton")
theme_override_colors/font_hover_color = Color(0.624822, 0.175097, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.857103, 0.253716, 1.92523e-07, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_4oq2b")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_7w1jv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_7w1jv")
text = "Start"
alignment = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_4oq2b")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_k85yc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_k85yc")
text = "Settings"
alignment = 0

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_hover_color = Color(0.623529, 0.176471, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0.858824, 0.254902, 0, 1)
theme_override_colors/font_color = Color(0.933333, 0.933333, 0.894118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = ExtResource("3_4oq2b")
theme_override_font_sizes/font_size = 75
theme_override_styles/focus = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/hover = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_p6trc")
theme_override_styles/normal = SubResource("StyleBoxEmpty_p6trc")
text = "Quit"
alignment = 0

[node name="TileMapLayer" type="TileMapLayer" parent="."]
z_index = -1
scale = Vector2(2, 2)
tile_map_data = PackedByteArray("AAAAAAAAAAACAAEAAAAAAAEAAAACAAEAAAAAAAIAAAACAAEAAAAAAAMAAAACAAEAAAAAAAQAAAACAAEAAAAAAAUAAAACAAEAAAAAAAYAAAACAAEAAAAAAAcAAAACAAEAAAABAAAAAAACAAEAAAABAAEAAAACAAEAAAABAAIAAAACAAEAAAABAAMAAAACAAEAAAABAAQAAAACAAEAAAABAAUAAAACAAEAAAABAAYAAAACAAEAAAABAAcAAAACAAEAAAACAAAAAAACAAEAAAACAAEAAAACAAEAAAACAAIAAAACAAEAAAACAAMAAAACAAEAAAACAAQAAAACAAEAAAACAAUAAAACAAEAAAACAAYAAAACAAEAAAACAAcAAAACAAEAAAADAAAAAAACAAEAAAADAAEAAAACAAEAAAADAAIAAAACAAEAAAADAAMAAAACAAEAAAADAAQAAAACAAEAAAADAAUAAAACAAEAAAADAAYAAAACAAEAAAADAAcAAAACAAEAAAAEAAAAAAACAAEAAAAEAAEAAAACAAEAAAAEAAIAAAACAAEAAAAEAAMAAAACAAEAAAAEAAQAAAACAAEAAAAEAAUAAAACAAEAAAAEAAYAAAACAAEAAAAEAAcAAAACAAEAAAAFAAAAAAACAAEAAAAFAAEAAAACAAEAAAAFAAIAAAACAAEAAAAFAAMAAAACAAEAAAAFAAQAAAACAAEAAAAFAAUAAAACAAEAAAAFAAYAAAACAAEAAAAFAAcAAAACAAEAAAAGAAAAAAACAAEAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAEAAAAGAAcAAAACAAEAAAAHAAAAAAACAAEAAAAHAAEAAAACAAEAAAAHAAIAAAACAAEAAAAHAAMAAAACAAEAAAAHAAQAAAACAAEAAAAHAAUAAAACAAEAAAAHAAYAAAACAAEAAAAHAAcAAAACAAEAAAAIAAAAAAACAAEAAAAIAAEAAAACAAEAAAAIAAIAAAACAAEAAAAIAAMAAAACAAEAAAAIAAQAAAACAAEAAAAIAAUAAAACAAEAAAAIAAYAAAACAAEAAAAIAAcAAAACAAEAAAAJAAAAAAACAAEAAAAJAAEAAAACAAEAAAAJAAIAAAACAAEAAAAJAAMAAAACAAEAAAAJAAQAAAACAAEAAAAJAAUAAAACAAEAAAAJAAYAAAACAAEAAAAJAAcAAAACAAEAAAAKAAAAAAACAAEAAAAKAAEAAAACAAEAAAAKAAIAAAACAAEAAAAKAAMAAAACAAEAAAAKAAQAAAACAAEAAAAKAAUAAAACAAEAAAAKAAYAAAACAAEAAAAKAAcAAAACAAEAAAALAAAAAAACAAEAAAALAAEAAAACAAEAAAALAAIAAAACAAEAAAALAAMAAAACAAEAAAALAAQAAAACAAEAAAALAAUAAAACAAEAAAALAAYAAAACAAEAAAALAAcAAAACAAEAAAAMAAAAAAACAAEAAAAMAAEAAAACAAEAAAAMAAIAAAACAAEAAAAMAAMAAAACAAEAAAAMAAQAAAACAAEAAAAMAAUAAAACAAEAAAAMAAYAAAACAAEAAAAMAAcAAAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAIAAAACAAEAAAANAAMAAAACAAEAAAANAAQAAAACAAEAAAANAAUAAAACAAEAAAANAAYAAAACAAEAAAANAAcAAAACAAEAAAAOAAAAAAACAAEAAAAOAAEAAAACAAEAAAAOAAIAAAACAAEAAAAOAAMAAAACAAEAAAAOAAQAAAACAAEAAAAOAAUAAAACAAEAAAAOAAYAAAACAAEAAAAOAAcAAAACAAEAAAAPAAAAAAACAAEAAAAPAAEAAAACAAEAAAAPAAIAAAACAAEAAAAPAAMAAAACAAEAAAAPAAQAAAACAAEAAAAPAAUAAAACAAEAAAAPAAYAAAACAAEAAAAPAAcAAAACAAEAAAAQAAAAAAACAAEAAAAQAAEAAAACAAEAAAAQAAIAAAACAAEAAAAQAAMAAAACAAEAAAAQAAQAAAACAAEAAAAQAAUAAAACAAEAAAAQAAYAAAACAAEAAAAQAAcAAAACAAEAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAATAAoAAAAAAAAAAAATAAkAAAAAAAAAAAATAAgAAAAAAAAAAAATAAcAAAAAAAAAAAATAAYAAAAAAAAAAAATAAsAAAAAAAAAAAASAAsAAAAAAAAAAAARAAsAAAAAAAAAAAAQAAsAAAAAAAAAAAAPAAsAAAAAAAAAAAAOAAsAAAAAAAAAAAANAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAsAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAsAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_6rs58")

[node name="GameLogo" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 289.0
offset_top = -147.0
offset_right = 1045.0
offset_bottom = 609.0
texture = ExtResource("5_4b7jm")

[node name="MonkeyTrio" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -65.0
offset_right = 231.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_8morn")
expand_mode = 2

[node name="Sound" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("7_7imlk")
autoplay = true
bus = &"Music"
parameters/looping = true

[node name="NavigateSFXPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("8_0vs8k")
bus = &"SFX"

[node name="SelectSFXPlayer" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("9_vgldu")
bus = &"SFX"

[connection signal="pressed" from="SocialsContainer/ItchIoButton" to="." method="_on_itch_io_button_pressed"]
[connection signal="pressed" from="SocialsContainer/GithubButton" to="." method="_on_github_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="focus_entered" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
